# dioxus-test-gh-pages

./: Cargo.toml  Dioxus.toml
docs/: index.html
docs/assets/dioxus/: dioxus-test.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-7853214f69bd9fe6/: inline0.js
docs/hello/: index.html
src/: main.rs
