[package]
name = "dioxus-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-router = { path = "../dioxus/packages/router" }
dioxus = { path = "../dioxus/packages/dioxus" }
dioxus-web = { path = "../dioxus/packages/web", features = ["hydrate"], optional = true }
dioxus-ssr = { path = "../dioxus/packages/ssr", optional = true }
dioxus-fullstack = { path = "../dioxus/packages/fullstack", features = ["router"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.29.0", features = ["full"], optional = true }
axum = { version = "0.6.12", optional = true }

[features]
default = []
web = ["dioxus-web", "dioxus-router/web"]
ssr = ["dioxus-ssr", "dioxus-router/ssr", "tokio", "dioxus-fullstack/axum", "axum"]
